<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_04">

            <!-- Logo and Coffee Corner Text -->
            <TextView
                android:id="@+id/tvLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/coffee_corner"
                android:textColor="@color/text_primary"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginTop="64dp"
                app:drawableStartCompat="@drawable/ic_coffee_cup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Welcome Text -->

            <!-- Subtitle Text -->
            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/welcome"
                android:textColor="@color/text_primary"
                android:textSize="64sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLogo" />

            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/explore_our_menu_and_order_your_favorite_coffee"
                android:textColor="@color/text_secondary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

            <!-- Coffee Image -->
            <ImageView
                android:id="@+id/ivCoffee"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:contentDescription="@string/coffee_cup"
                android:src="@drawable/ic_corner_coffee_logo"
                app:layout_constraintBottom_toTopOf="@+id/btnContinue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSubtitle" />

            <!-- Continue Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="296dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/color_01"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/continues"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSubtitle"
                app:layout_constraintVertical_bias="0.761" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>